# OSMSG

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  test_app.yml
osmsg/: app.py  utils.py
